# jedha-cdsd-cert-projects

./: .env.sample  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.bak.1  README.md  devcontainer.json
bloc-1/: README.md  link_cdsd_bloc_1_kayak_presentation.url  link_cdsd_bloc_1_repository.url
bloc-1/kayak/: 00-JEDHA-Plan_your_trip_with_Kayak.ipynb  01-b1-kayak-destinations.ipynb  02-b1-kayak-cities-weather-forecast.ipynb  03-b1-kayak-get-hotels.ipynb  03-b1-kayak-get-hotels_scrapper.log.txt  04-b1-kayak-etl.ipynb  05-b1-kayak-viz.ipynb  README.md  config.py  etl.py  utils.py
bloc-2/: README.md  link_cdsd_bloc_2_repository.url  link_cdsd_bloc_2_speed-dating_presentation.url  link_cdsd_bloc_2_steam_presentation.url
bloc-2/speed-dating/: 00-JEDHA-Speed_Dating.ipynb  01-speed-dating-eda.ipynb  02-speed-dating-eda-data-cleaning.ipynb  03-speed-dating-eda-participants.ipynb  04-speed-dating-eda-match.ipynb  README.md  config.py  data_loader.py  document-synthesis.ipynb  speed_dating_document_context.py  viz.py
bloc-2/steam/: 02-b2-steam-databricks.md  04-b2-steam-dataset.md  README.md  link_cdsd_b2_steam_databrick_public_notebook.url
bloc-3/: README.md  link_cdsd_bloc_3_app_uber_pickups_hot_zones_dashboard.url  link_cdsd_bloc_3_presentation_conversion_rate_challenge.url  link_cdsd_bloc_3_presentation_walmart_sales.url  link_cdsd_bloc_3_repository.url  link_cdsd_bloc_3_uber_pickups_presentation.url
bloc-3/Conversion rate challenge/: 00-b3-JEDHA-Conversion_rate_challenge.ipynb  00-b3-JEDHA-Conversion_rate_challenge_template.ipynb  01-b3-JEDHA-Conversion_rate_challenge_EDA.ipynb  02-b3-JEDHA-Conversion_rate_challenge_v1.ipynb  03-b3-JEDHA-Conversion_rate_challenge_v3.ipynb  (+1 more)
bloc-4/: README.md  link_cdsd_bloc_4_AT&T_spam_detector_presentation.url  link_cdsd_bloc_4_repository.url
bloc-5/: README.md  link_cdsd_bloc_5_getaround_api_price_predict.url  link_cdsd_bloc_5_getaround_presentation.url  link_cdsd_bloc_5_getaround_rentals_dashboard.url  link_cdsd_bloc_5_repository.url
bloc-5/Getaround/apps/api/: Dockerfile  README.md  hf-deploy.yml  hf.README.md  main.py  pyproject.toml
bloc-5/Getaround/apps/api/model/: getaround_model.joblib  getaround_preprocessor.pkl
bloc-6/: README.md  link_cdsd_bloc_6_repository.url  link_cdsd_bloc_6_traffic_signs_detection_tester.url  link_cdsd_bloc_6_traffic_signs_presentation.url
common/: README.md
test/: test.ipynb  test2.ipynb
(+79 files in other folders)
