[project]
name = "getaround-api"
version = "0.1.0"
description = "An API service able to suggest the smarted rental price given a car specifications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "joblib>=1.5.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.1",
]
